[gd_scene load_steps=2 format=3 uid="uid://dcig5ddyqrngx"]

[ext_resource type="Script" path="res://Stats.gd" id="1_owyxa"]

[node name="Stats" type="CanvasLayer"]
script = ExtResource("1_owyxa")

[node name="BasePanel" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.12549, 0.12549, 1)

[node name="VersionLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -328.0
offset_top = 232.0
offset_right = -128.0
offset_bottom = 322.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 42
text = "ver. 0.1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AuthorLabel" type="Label" parent="BasePanel"]
offset_left = 128.0
offset_top = 232.0
offset_right = 328.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 42
text = "by belog"
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -231.0
offset_top = 126.0
offset_right = 231.0
offset_bottom = 216.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 63
text = "game of thorns"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -192.0
offset_right = 100.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 63
text = "stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsQuickNameLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = -45.0
offset_right = 477.0
offset_bottom = 45.0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "max round (quick):"
vertical_alignment = 1

[node name="StatsQuickValueLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -45.0
offset_right = -96.0
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="StatsLongNameLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = 85.0
offset_right = 475.0
offset_bottom = 175.0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "max round (long):"
vertical_alignment = 1

[node name="StatsLongValueLabel" type="Label" parent="BasePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 85.0
offset_right = -96.0
offset_bottom = 175.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "99"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BackButton" type="Button" parent="BasePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 340.0
offset_right = 200.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "back
"

[connection signal="pressed" from="BasePanel/BackButton" to="." method="_on_back_button_pressed"]
